Ajout de la barre de navigation sur la page contact

--- a/PageContact.html
+++ b/PageContact.html
@@ -6,6 +6,12 @@
     <title>Page Contact</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="textNav">
+        <a href="maps.html">Maps</a>   
+        <a href="PageDescriptionProjet.html">Description du projet</a> 
+        <a href="PageContact.html">Nous Contacter</a>
+        </div>
+    </nav>
 </body>
 </html>
