Ajout des trois premiers blocs de formulaire (Nom , Numéro de téléphone , Adresse courriel) pour la page contact.

--- a/PageContact.html
+++ b/PageContact.html
@@ -14,5 +14,18 @@
         <a href="PageContact.html">Nous Contacter</a>
         </div>
     </nav>
+    <br>
+    <br>
+    <label for="Nom">Nom :</label>
+    <input name="Nom" id="Nom" rows="1"></input><span>*</span><br>
+    <br>
+
+    <label for="Numéro de téléphone">Numéro de téléphone : </label>
+    <input name="Numéro de téléphone" id="Numéro de téléphone" rows="1"></input><span>*</span><br>
+    <br>
+
+    <label for="Adresse courriel">Adresse courriel :</label>
+    <input type="email" name="Adresse courriel" id="Adresse courriel" rows="1"></input><span>*</span><br>
+    <br>
 </body>
 </html>
