Amélioration de la barre de navigation pour toutes les pages (V2)

--- a/PageContact.html
+++ b/PageContact.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <nav>
-        <div class="textNav">
-        <a href="maps.html">Maps</a>   
-        <a href="PageDescriptionProjet.html">Description du projet</a> 
-        <a href="PageContact.html">Nous Contacter</a>
-        </div>
+        <ul class="nav-list">
+        <li class="nav-item"><a href="maps.html">Maps</a></li>   
+        <li class="nav-item"><a href="PageDescriptionProjet.html">Description du projet</a></li>
+        <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
+        </ul>
     </nav>
     <br>
     <br>
