--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PageAccueil</title>
 <link rel="stylesheet" href="StyleIndex.css" type="text/css">
 </head>
 <body>
     <nav>
-        <div class="textNav">
-        <a href="maps.html">Maps</a>   
-        <a href="PageDescriptionProjet.html">Description du projet</a> 
-        <a href="PageContact.html">Nous Contacter</a>
-        </div>
+        <ul class="nav-list">
+        <li class="nav-item"><a href="PageAccueil.html" class="lien-icone"> <img src="images/Capture.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>   
+        <li class="nav-item"><a href="maps.html">Maps</a></li>   
+        <li class="nav-item"><a href="PageDescriptionProjet.html">Description du projet</a></li>
+        <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
+        </ul>
     </nav>
 </body>
 </html>
