ajout images pour page maps et correction du href index
a

--- a/maps.html
+++ b/maps.html
@@ -9,11 +9,14 @@
 <body>
     <nav>
         <ul class="nav-list">
-        <li class="nav-item"><a href="PageAccueil.html" class="lien-icone"> <img src="images/Capture.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>   
+        <li class="nav-item"><a href="index.html" class="lien-icone"> <img src="images/Capture.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>   
         <li class="nav-item"><a href="maps.html">Maps</a></li>   
         <li class="nav-item"><a href="PageDescriptionProjet.html">Description du projet</a></li>
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
         </ul>
     </nav>
+
+
+
 </body>
 </html>
