Implémentation des liens pour envoyer le formulaire et annuler.

--- a/PageContact.html
+++ b/PageContact.html
@@ -38,9 +38,9 @@
     <br>
     <br>
     
-    <input type="submit" value="Envoyer"/>
+    <a href="PageConfirmationContact.html"><input type="submit" value="Envoyer"/></a>
     
-    <input type="reset" value="Annuler"/> 
+    <a href="index.html"><input type="reset" value="Annuler"></a> 
 
 
 
