Première essai pour le début de la page index.html

--- a/index.html
+++ b/index.html
@@ -15,5 +15,17 @@
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
         </ul>
     </nav>
+
+    <section class="Accueil-photo-CS-GO">
+    <div>
+      <img src="images/Image accueil CS-GO.png"  height="920px">
+      <img src="images/Barre noire séparatrice.png" width="1400px" />
+    </div>
+</section>
+<iframe 
+src="https://www.youtube.com/watch?v=ExZtISgOxEQ&ab_channel=Valve"></iframe>
+
+
+
 </body>
 </html>
