Première version de la page Description projet (V1) (Début de page)

--- a/PageDescriptionProjet.html
+++ b/PageDescriptionProjet.html
@@ -15,5 +15,68 @@
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
         </ul>
     </nav>
+
+<strong><h1>Présentation du projet : </h1></strong>
+<br>
+<br>
+<br>
+Notre projet est un site informatif sur le jeu vidéo Counter-Strike 2. Il a<br>
+pour but de décrire les différentes cartes jouables sur le jeu<br>
+présentemment.<br>
+<br>
+Comme par exemple : Inferno , Dust II , Ancient , Anubis et autres.Il a<br>
+été inspiré de deux sites qui parlent de ce jeu aussi , le site officiel du<br>
+jeu et un blog sur CS-GO.<br>
+
+
+
+
+
+
+<strong><h2>Site web concurrent : </h2></strong>
+<br>
+<br>
+<br>
+<a href="https://counterstrike.fandom.com/wiki/Counter-Strike:_Global_Offensive">Site d'un blog sur CS-GO 2</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<a href="https://www.counter-strike.net/">Site officiel du jeu</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+Nous avons opté pour une<br> 
+coloration plutot foncer en<br>
+s’inspirant du site Fandom qui<br> 
+est majoritairement noir. 
+Nous avons fait en sorte que le<br>
+thème du site sois plutot foncer<br> 
+car nous pensons que c’est en<br> 
+rendant le site simple que les<br> 
+utilisateurs auront envie de<br> 
+revenir. Nous pensons que le<br> 
+fait d’amener un theme plus<br>
+coloré nous aurais nuis sur le<br>
+long terme car notre site<br>
+n’aurais pas paru comme un site<br>
+ou l’ont peux revenir pour<br> 
+decrouvrir les nouveautés ainsi<br> 
+que donner son avis.Nous<br> 
+n’avons pas repris la couleur de<br> 
+fond plus sombre des<br> 
+sites.Parce que nous voulons<br> 
+garder prioriser sur la clarté du<br> 
+site et nous ne voulons pas trop<br> 
+nous inspirer.<br>
+
+
+
+
 </body>
 </html>
