Ajout de l'icone et du texte pour retourner à l'accueil (index.html)

--- a/PageConfirmationContact.html
+++ b/PageConfirmationContact.html
@@ -9,10 +9,21 @@
 <body>
     <nav>
         <ul class="nav-list">
+        <li class="nav-item"><a href="index.html" class="lien-icone"> <img src="images/Capture.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>
         <li class="nav-item"><a href="maps.html">Maps</a></li>   
         <li class="nav-item"><a href="PageDescriptionProjet.html">Description du projet</a></li>
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
         </ul>
     </nav>
+
+
+    
+
+
+
+
+    <strong><a href="index.html">Retour à l'accueil</a></strong>
+
+
 </body>
 </html>
