Ajout des boutons de navigations avec le rectangle jaune pour la page maps

--- a/maps.html
+++ b/maps.html
@@ -70,6 +70,16 @@
                   de détruire le viaduc lui-même en
                    bombardant le pilier en dessous.</div>
 </div>
+<div class="container-case-jaune">
+
+<a href="index.html"><div class="text-container-case-jaune">Accueil</div></a>
+
+<a href="maps.html"><div class="text-container-case-jaune">Maps</div></a>
+
+<a href="PageDescriptionProjet.html"><div class="text-container-case-jaune">Description projet</div></a>
+
+<a href="PageContact.html"><div class="text-container-case-jaune">Contact</div></a>
+</div>
 
 
 
