--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 
     <section class="Accueil-photo-CS-GO">
     <div>
-      <img src="images/Image accueil CS-GO.png"  height="920px">
-      <img src="images/Barre noire séparatrice.png" width="1400px" />
+      <img src="images/Image de cs-go au tout début du site.png" >
+      <img src="images/Séparation d'une partie de la page d'accueil (Rectangle noir).png"  />
+      <img src="images/image de cs-go blanc et noir.png"/>
+    
     </div>
 </section>
-<iframe 
-src="https://www.youtube.com/watch?v=ExZtISgOxEQ&ab_channel=Valve"></iframe>
+
 
 
 
