--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
         </ul>
     </nav>
 
-    <section class="Accueil-photo-CS-GO">
-    <div>
+    <div class="conteneur-page-index-debut">
+     <div class="conteneur-image-index">
       <img src="images/Image de cs-go au tout début du site.png" >
-      <img src="images/Séparation d'une partie de la page d'accueil (Rectangle noir).png"  />
+      CS-maps.com
+
+     Un site de présentation de maps du célèbre jeu 
       <img src="images/image de cs-go blanc et noir.png"/>
-    
+     </div>
     </div>
-</section>
+
+      <img src="images/Séparation d'une partie de la page d'accueil (Rectangle noir).png"  />
+
 
 
 
