ajout des commentaires
ajouts des commentaires

--- a/PageDescriptionProjet.html
+++ b/PageDescriptionProjet.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="StylePageDescriptionProjet.css" type="text/css">
 </head>
 <body>
+    <!-- Barre de navigation-->
     <nav>
         <ul class="nav-list">
         <li class="nav-item"><a href="index.html" class="lien-icone"> <img src="images/Maison icone pour retour à l'accueil.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>   
@@ -15,7 +16,7 @@
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
         </ul>
     </nav>
-
+ <!-- Présentation de du projet -->
 <br>
 <br>
 <br>
@@ -79,7 +80,7 @@ jeu et un blog sur CS-GO.<br>
 
 
 <div class="conteneur-choix-des-couleurs">
-
+<!-- Contenue principal -->
 <strong><h3>Choix des couleurs : </h3></strong>    
 <br>
 <br>
@@ -224,7 +225,7 @@ visuel.<br>
         </div>
 </div>
 
-
+ <!-- Navigation du bas de la page -->
 <div class="container-case-jaune">
 
     <a href="index.html"><div class="text-container-case-jaune">Accueil</div></a>
