--- a/maps.html
+++ b/maps.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylemaps.css" type="text/css">
 </head>
 <body>
+    <!-- Barre de navigation-->
     <nav>
         <ul class="nav-list">
         <li class="nav-item"><a href="index.html" class="lien-icone"> <img src="images/Maison icone pour retour à l'accueil.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>   
@@ -15,6 +16,7 @@
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
         </ul>
     </nav>
+     <!-- Contenu principal -->
    <div class="container-text-droite">
 <div> <img src="images/Image map _ dust II.png" alt=""></div>
    <div class="text-droite">Dust II:  une carte de jeu vidéo présentée dans la
@@ -70,6 +72,7 @@
                   de détruire le viaduc lui-même en
                    bombardant le pilier en dessous.</div>
 </div>
+<!-- Navigation du bas de la page -->
 <div class="container-case-jaune">
 
 <a href="index.html"><div class="text-container-case-jaune">Accueil</div></a>
