Amélioration de la page d'accueil avec flexbox et css

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
     </nav>
 
     <div class="conteneur-page-index-debut">
-     <div class="conteneur-image-index">
-      <img src="images/Image de cs-go au tout début du site.png" >
-      CS-maps.com
-
-     Un site de présentation de maps du célèbre jeu 
-      <img src="images/image de cs-go blanc et noir.png"/>
-     </div>
+    
+     
+    <div class="text-conteneur-index-debut">
+    CS-maps.com<br>
+    <br>
+    <br>
+    Un site de présentation de maps du célèbre jeu<br>
     </div>
+      <img src="images/image de cs-go blanc et noir.png" width="408" height="244"/>
+     </div>
 
       <img src="images/Séparation d'une partie de la page d'accueil (Rectangle noir).png"  />
 
