Correction de noms de dossiers

--- a/PageDescriptionProjet.html
+++ b/PageDescriptionProjet.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul class="nav-list">
-        <li class="nav-item"><a href="index.html" class="lien-icone"> <img src="images/Maison icone pour retour à l'accueil.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>   
+        <li class="nav-item"><a href="index.html" class="lien-icone"> <img src="images-et-vidéos/Maison icone pour retour à l'accueil.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>   
         <li class="nav-item"><a href="maps.html">Maps</a></li>   
         <li class="nav-item"><a href="PageDescriptionProjet.html">Description du projet</a></li>
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
@@ -46,7 +46,7 @@ jeu et un blog sur CS-GO.<br>
 <a href="https://counterstrike.fandom.com/wiki/Counter-Strike:_Global_Offensive">Site d'un blog sur CS-GO 2</a>
 </div>
 <div>
-    <img src="images/Image-blog-CS-GO-2.png">
+    <img src="images-et-vidéos/Image-blog-CS-GO-2.png">
 </div>
 </div>
 <br>
@@ -57,7 +57,7 @@ jeu et un blog sur CS-GO.<br>
 <div class="container-page-description-projet-lien-de-debut-site-officiel-du-jeu">
 
     <div><a href="https://www.counter-strike.net/">Site officiel du jeu : </a></div>
-    <div> <img src="images/image site officiel CS-GO 2.png">                        </div>
+    <div> <img src="images-et-vidéos/image site officiel CS-GO 2.png">                        </div>
 </div>
 
 
