--- a/PageContact.html
+++ b/PageContact.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul class="nav-list">
-        <li class="nav-item"><a href="index.html" class="lien-icone"> <img src="images/Maison icone pour retour à l'accueil.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>   
+        <li class="nav-item"><a href="index.html" class="lien-icone"> <img src="images-et-vidéos/Maison icone pour retour à l'accueil.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>   
         <li class="nav-item"><a href="maps.html">Maps</a></li>   
         <li class="nav-item"><a href="PageDescriptionProjet.html">Description du projet</a></li>
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
