--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="StyleIndex.css" type="text/css">
 </head>
 <body>
+    <!-- Barre de navigation-->
     <nav>
         <ul class="nav-list">
         <li class="nav-item"><a href="index.html" class="lien-icone"> <img src="images/Maison icone pour retour à l'accueil.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>   
@@ -15,7 +16,7 @@
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
         </ul>
     </nav>
-
+ <!-- Contenu principal -->
     <div class="conteneur-page-index-debut">
     
      
