ajout video youtube

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
 
       <img src="images/Séparation d'une partie de la page d'accueil (Rectangle noir).png"  />
 
+      <div class="conteneur-page-index-partie-2">
+        <div class="image-decrit-CS-GO">
+
+          </div>
+        <iframe  width="1950" height="1081" src="https://www.youtube.com/embed/Q0JQBsyvNgA?si=P18Y0R9fAAwNvRMr" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    </div>
+
 
 
 
