Ajout de la vidéo personnelle en << HTML >>

--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
         </div>
         </div>
 
+        <div class="video-personelle-CS-GO">
 
+        <video width="1920" height="1169" controls 
+        src="images-et-vidéos/Video cs-go Projet Web.mp4" type="video/mp4">
+        </video>
 
 
 
