Remplacer les << en >> par des << fr >> en haut des fichiers << html >> .

--- a/PageDescriptionProjet.html
+++ b/PageDescriptionProjet.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DescriptionProjet</title>
+    <title>Page de description de notre projet</title>
     <link rel="stylesheet" href="StylePageDescriptionProjet.css" type="text/css">
 </head>
 <body>
