--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PageAccueil</title>
+    <title>Page d'accueil du site</title>
 <link rel="stylesheet" href="StyleIndex.css" type="text/css">
 </head>
 <body>
