--- a/PageConfirmationContact.html
+++ b/PageConfirmationContact.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page de confirmation de contact</title>
     <link rel="stylesheet" href="StylePageConfirmationContact.css" type="text/css">
 </head>
 <body>
