L'ajout de l'option << blank >> pour les liens de sites CS-GO dans la page description projet.

--- a/PageDescriptionProjet.html
+++ b/PageDescriptionProjet.html
@@ -44,7 +44,7 @@ jeu et un blog sur CS-GO.<br>
 <br>
 <br>
 <br>
-<a href="https://counterstrike.fandom.com/wiki/Counter-Strike:_Global_Offensive">Site d'un blog sur CS-GO 2</a>
+<a href="https://counterstrike.fandom.com/wiki/Counter-Strike:_Global_Offensive" target="_blank">Site d'un blog sur CS-GO 2</a>
 </div>
 <div>
     <img src="images/Image-blog-CS-GO-2.png">
@@ -57,7 +57,7 @@ jeu et un blog sur CS-GO.<br>
 <br>
 <div class="container-page-description-projet-lien-de-debut-site-officiel-du-jeu">
 
-    <div><a href="https://www.counter-strike.net/">Site officiel du jeu : </a></div>
+    <div><a href="https://www.counter-strike.net/" target="_blank">Site officiel du jeu : </a></div>
     <div> <img src="images/image site officiel CS-GO 2.png">                        </div>
 </div>
 
