Ajout des flèches dans le fichier << HTML >> et ses organisations dans le fichier << CSS >>.

--- a/PageDescriptionProjet.html
+++ b/PageDescriptionProjet.html
@@ -24,13 +24,13 @@
 <br>
 <br>
 <br>
-Notre projet est un site informatif sur le jeu vidéo Counter-Strike 2. Il a<br>
+<p>Notre projet est un site informatif sur le jeu vidéo Counter-Strike 2. Il a<br>
 pour but de décrire les différentes cartes jouables sur le jeu<br>
-présentemment.<br>
+présentemment.<br></p>
 <br>
-Comme par exemple : Inferno , Dust II , Ancient , Anubis et autres.Il a<br>
+<p>Comme par exemple : Inferno , Dust II , Ancient , Anubis et autres.Il a<br>
 été inspiré de deux sites qui parlent de ce jeu aussi , le site officiel du<br>
-jeu et un blog sur CS-GO.<br>
+jeu et un blog sur CS-GO.<br></p>
 
 
 
@@ -69,6 +69,16 @@ jeu et un blog sur CS-GO.<br>
 <br>
 <br>
 <br>
+
+<div class="conteneur-flèche-description-projet">
+<div><img src="images/Fleche de gauche et droite description projet.png"></div>
+
+<div class="duo-fleche-de-droite"><img src="images/Fleche de gauche et droite description projet.png"></div>
+</div>
+
+
+
+
 
 
 <div class="conteneur-aspect-visuel-et-contenu-du-site">
