Ajout des flèches en bas de page dans le fichier description projet.

--- a/PageDescriptionProjet.html
+++ b/PageDescriptionProjet.html
@@ -188,8 +188,12 @@ visuel.<br>
 </div>
 </div>
 
+<div class="conteneur-flèche-description-projet-bas-de-page">
+    <div><img src="images/Fleche de gauche et droite description projet.png"></div>
+    
+    </div>
 
-<div class="conteneur-Killian-Laurier">
+    <div class="conteneur-Killian-Laurier">
 
     <div class="conteneur-Killian">
         <div class="titre-presentation">Killian Sinou<br>
