Implémentation des derniers commentaires

--- a/PageConfirmationContact.html
+++ b/PageConfirmationContact.html
@@ -16,7 +16,7 @@
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
         </ul>
     </nav>
- <!-- Contenu principal -->
+ <!-- Confirmation d'envoi et le bouton envoyer et annuler -->
 <div class="container-page-confirmation-contact">
 <div class="texte-au-millieu-page-confirmation-contact">Votre requête à bien été envoyé !</div>
 <a href="index.html"><div class="texte-au-bas-page-confirmation-contact">Retour à l'accueil
