--- a/PageContact.html
+++ b/PageContact.html
@@ -15,7 +15,7 @@
         <li class="nav-item"><a href="PageDescriptionProjet.html">Description du projet</a></li>
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
         </ul>
-         <!-- Contenu principal -->
+         <!-- Formulaire avec nom , numéro de téléphone , adresse courriel , et une question a posé. -->
     </nav>
     <br>
     <br>
@@ -40,6 +40,7 @@
     <br>
     <br>
     
+    <!-- Bouton d'envoi et d'annulation -->
     <a href="PageConfirmationContact.html"><input type="submit" value="Envoyer"/></a>
     
     <a href="index.html"><input type="reset" value="Annuler"></a> 
