--- a/maps.html
+++ b/maps.html
@@ -16,7 +16,7 @@
         <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
         </ul>
     </nav>
-     <!-- Contenu principal -->
+     <!-- texte et image sur la map Dust II -->
    <div class="container-text-droite">
 <div> <img src="images/Image map _ dust II.png" alt=""></div>
    <div class="text-droite">Dust II:  une carte de jeu vidéo présentée dans la
@@ -26,6 +26,7 @@
        selon Jess Cliffe, co-concepteur du jeu Counter-
        Strike original.</div>
 </div>
+<!-- texte et image sur la map Mirage -->
 <div class="container-text-gauche">
     <div class="text-gauche">Mirage: Après la sortie de Global Offensive, Valve a
          décidé de refaire la carte et de l'inclure comme
@@ -38,6 +39,7 @@
                 mises à jour pour refléter un style marocain.</div>
            <div> <img src="images/Image map _ Mirage.png" alt=""></div>
         </div>
+<!-- texte et image sur la map Inferno -->
 <div class="container-text-droite">
     <div> <img src="images/Image map _ Inferno.png" alt=""></div>
         <div class="text-droite">Inferno: La carte se déroule dans une petite ville à
@@ -50,6 +52,7 @@
                    Pays basque en Espagne et en France, il est donc
                     plausible qu'elle puisse y être également.</div>
 </div>
+<!-- texte et image sur la map Nuke -->
 <div class="container-text-gauche">
 <div class="text-gauche">Nuke: La carte se déroule dans un entrepôt
      contenant des matières nucléaires ou dans
@@ -60,6 +63,7 @@
           centrale nucléaire américaine.</div>
 <div> <img src="images/Image map _ Nuke.png" alt=""></div>
 </div>
+<!-- texte et image sur la map Overpass -->
 <div class="container-text-droite">
     <div> <img src="images/Image map _ Overpass.png" alt=""></div>
         <div class="text-droite">Overpass: Le décor de la carte est un
