Indentation du code HTML de la page << maps.html >>

--- a/maps.html
+++ b/maps.html
@@ -8,112 +8,73 @@
 </head>
 <body>
     <!-- Barre de navigation-->
-    <nav>
-        <ul class="nav-list">
-        <li class="nav-item"><a href="index.html" class="lien-icone"> <img src="images/Maison icone pour retour à l'accueil.PNG" alt="image maison accueil" width="70px" height="70px"> </a></li>   
-        <li class="nav-item"><a href="maps.html">Maps</a></li>   
-        <li class="nav-item"><a href="PageDescriptionProjet.html">Description du projet</a></li>
-        <li class="nav-item"><a href="PageContact.html">Nous Contacter</a></li>
-        </ul>
-    </nav>
-     <!-- texte et image sur la map Dust II -->
-   <div class="container-text-droite">
-<div> <img src="images/Image map _ dust II.png" alt=""></div>
-   <div class="text-droite">Dust II:  une carte de jeu vidéo présentée dans la
-     série de tir à la première personne Counter-
-     Strike. La carte se déroule dans un
-      environnement poussiéreux basé sur le Maroc
-       selon Jess Cliffe, co-concepteur du jeu Counter-
-       Strike original.</div>
-</div>
-<!-- texte et image sur la map Mirage -->
-<div class="container-text-gauche">
-    <div class="text-gauche">Mirage: Après la sortie de Global Offensive, Valve a
-         décidé de refaire la carte et de l'inclure comme
-          carte officielle de désamorçage des bombes.
-           Comme pour toutes les cartes officielles, Valve a
-            mis à jour les visuels et peaufiné le gameplay pour
-             un meilleur jeu compétitif. Par exemple, les
-              versions originales de Mirage avaient des textures
-               similaires à celles de l'Italie, mais ont ensuite été
-                mises à jour pour refléter un style marocain.</div>
-           <div> <img src="images/Image map _ Mirage.png" alt=""></div>
-        </div>
-<!-- texte et image sur la map Inferno -->
-<div class="container-text-droite">
-    <div> <img src="images/Image map _ Inferno.png" alt=""></div>
-        <div class="text-droite">Inferno: La carte se déroule dans une petite ville à
-             l’architecture européenne. Dans la version Global
-              Offensive, la présence de la faction séparatiste
-               suggère que la carte se déroule définitivement en
-                Italie, comme en témoignent les signes écrits en
-                 italien visibles autour de la carte. Cependant, la
-                  faction séparatiste est également présente au
-                   Pays basque en Espagne et en France, il est donc
-                    plausible qu'elle puisse y être également.</div>
-</div>
-<!-- texte et image sur la map Nuke -->
-<div class="container-text-gauche">
-<div class="text-gauche">Nuke: La carte se déroule dans un entrepôt
-     contenant des matières nucléaires ou dans
-      une centrale nucléaire. Dans Global Offensive,
-       la version originale de la carte se déroule dans
-        une centrale nucléaire allemande, tandis que
-         la version remaniée se déroule dans une
-          centrale nucléaire américaine.</div>
-<div> <img src="images/Image map _ Nuke.png" alt=""></div>
-</div>
-<!-- texte et image sur la map Overpass -->
-<div class="container-text-droite">
-    <div> <img src="images/Image map _ Overpass.png" alt=""></div>
-        <div class="text-droite">Overpass: Le décor de la carte est un
-             viaduc de canal et le parc construit au-
-             dessus à Berlin, en Allemagne. Le GSG-9
-              doit protéger une cargaison militaire
-               bloquée sur un viaduc de canal tandis
-                que la Phoenix Connexion peut soit
-                 attaquer la cargaison de front, soit tenter
-                  de détruire le viaduc lui-même en
-                   bombardant le pilier en dessous.</div>
-</div>
-<!-- Navigation du bas de la page -->
-<div class="container-case-jaune">
-
-<a href="index.html"><div class="text-container-case-jaune">Accueil</div></a>
-
-<a href="maps.html"><div class="text-container-case-jaune">Maps</div></a>
-
-<a href="PageDescriptionProjet.html"><div class="text-container-case-jaune">Description projet</div></a>
-
-<a href="PageContact.html"><div class="text-container-case-jaune">Contact</div></a>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<nav>
+    <ul class="nav-list">
+      <li class="nav-item">
+        <a href="index.html" class="lien-icone">
+          <img src="images/Maison icone pour retour à l'accueil.PNG" alt="image maison accueil" width="70px" height="70px">
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="maps.html">Maps</a>
+      </li>
+      <li class="nav-item">
+        <a href="PageDescriptionProjet.html">Description du projet</a>
+      </li>
+      <li class="nav-item">
+        <a href="PageContact.html">Nous Contacter</a>
+      </li>
+    </ul>
+  </nav>
+  <!-- texte et image sur la map Dust II -->
+  <div class="container-text-droite">
+    <div>
+      <img src="images/Image map _ dust II.png" alt="">
+    </div>
+    <div class="text-droite">Dust II: une carte de jeu vidéo présentée dans la série de tir à la première personne Counter- Strike. La carte se déroule dans un environnement poussiéreux basé sur le Maroc selon Jess Cliffe, co-concepteur du jeu Counter- Strike original.</div>
+  </div>
+  <!-- texte et image sur la map Mirage -->
+  <div class="container-text-gauche">
+    <div class="text-gauche">Mirage: Après la sortie de Global Offensive, Valve a décidé de refaire la carte et de l'inclure comme carte officielle de désamorçage des bombes. Comme pour toutes les cartes officielles, Valve a mis à jour les visuels et peaufiné le gameplay pour un meilleur jeu compétitif. Par exemple, les versions originales de Mirage avaient des textures similaires à celles de l'Italie, mais ont ensuite été mises à jour pour refléter un style marocain.</div>
+    <div>
+      <img src="images/Image map _ Mirage.png" alt="">
+    </div>
+  </div>
+  <!-- texte et image sur la map Inferno -->
+  <div class="container-text-droite">
+    <div>
+      <img src="images/Image map _ Inferno.png" alt="">
+    </div>
+    <div class="text-droite">Inferno: La carte se déroule dans une petite ville à l’architecture européenne. Dans la version Global Offensive, la présence de la faction séparatiste suggère que la carte se déroule définitivement en Italie, comme en témoignent les signes écrits en italien visibles autour de la carte. Cependant, la faction séparatiste est également présente au Pays basque en Espagne et en France, il est donc plausible qu'elle puisse y être également.</div>
+  </div>
+  <!-- texte et image sur la map Nuke -->
+  <div class="container-text-gauche">
+    <div class="text-gauche">Nuke: La carte se déroule dans un entrepôt contenant des matières nucléaires ou dans une centrale nucléaire. Dans Global Offensive, la version originale de la carte se déroule dans une centrale nucléaire allemande, tandis que la version remaniée se déroule dans une centrale nucléaire américaine.</div>
+    <div>
+      <img src="images/Image map _ Nuke.png" alt="">
+    </div>
+  </div>
+  <!-- texte et image sur la map Overpass -->
+  <div class="container-text-droite">
+    <div>
+      <img src="images/Image map _ Overpass.png" alt="">
+    </div>
+    <div class="text-droite">Overpass: Le décor de la carte est un viaduc de canal et le parc construit au- dessus à Berlin, en Allemagne. Le GSG-9 doit protéger une cargaison militaire bloquée sur un viaduc de canal tandis que la Phoenix Connexion peut soit attaquer la cargaison de front, soit tenter de détruire le viaduc lui-même en bombardant le pilier en dessous.</div>
+  </div>
+  <!-- Navigation du bas de la page -->
+  <div class="container-case-jaune">
+    <a href="index.html">
+      <div class="text-container-case-jaune">Accueil</div>
+    </a>
+    <a href="maps.html">
+      <div class="text-container-case-jaune">Maps</div>
+    </a>
+    <a href="PageDescriptionProjet.html">
+      <div class="text-container-case-jaune">Description projet</div>
+    </a>
+    <a href="PageContact.html">
+      <div class="text-container-case-jaune">Contact</div>
+    </a>
+  </div>
 </body>
 </html>
