Changement de noms pour certains conteneurs

--- a/PageDescriptionProjet.html
+++ b/PageDescriptionProjet.html
@@ -50,7 +50,7 @@
     <br>
   </p>
   <!-- Lien sur le site du blog du jeu -->
-  <div class="container-page-description-projet-lien-de-debut-blog-du-jeu">
+  <div class="conteneur-page-description-projet-lien-de-debut-blog-du-jeu">
     <div>
       <strong>
         <h2>Site web concurrent :</h2>
@@ -70,7 +70,7 @@
   <br>
   <br>
   <!-- Lien sur le site officiel du jeu CS-GO 2 -->
-  <div class="container-page-description-projet-lien-de-debut-site-officiel-du-jeu">
+  <div class="conteneur-page-description-projet-lien-de-debut-site-officiel-du-jeu">
     <div>
       <a href="https://www.counter-strike.net/" target="_blank">Site officiel du jeu :</a>
     </div>
@@ -247,18 +247,18 @@
     </div>
   </div>
   <!-- Navigation du bas de la page -->
-  <div class="container-case-jaune">
+  <div class="conteneur-case-jaune">
     <a href="index.html">
-      <div class="text-container-case-jaune">Accueil</div>
+      <div class="texte-conteneur-case-jaune">Accueil</div>
     </a>
     <a href="maps.html">
-      <div class="text-container-case-jaune">Maps</div>
+      <div class="texte-conteneur-case-jaune">Maps</div>
     </a>
     <a href="PageDescriptionProjet.html">
-      <div class="text-container-case-jaune">Description projet</div>
+      <div class="texte-conteneur-case-jaune">Description projet</div>
     </a>
     <a href="PageContact.html">
-      <div class="text-container-case-jaune">Contact</div>
+      <div class="texte-conteneur-case-jaune">Contact</div>
     </a>
   </div>
 
