--- a/index.html
+++ b/index.html
@@ -117,18 +117,18 @@
     </div>
   </div>
   <!-- Navigation bas de page  -->
-  <div class="container-case-jaune">
+  <div class="conteneur-case-jaune">
     <a href="index.html">
-      <div class="text-container-case-jaune">Accueil</div>
+      <div class="texte-conteneur-case-jaune">Accueil</div>
     </a>
     <a href="maps.html">
-      <div class="text-container-case-jaune">Maps</div>
+      <div class="texte-conteneur-case-jaune">Maps</div>
     </a>
     <a href="PageDescriptionProjet.html">
-      <div class="text-container-case-jaune">Description projet</div>
+      <div class="texte-conteneur-case-jaune">Description projet</div>
     </a>
     <a href="PageContact.html">
-      <div class="text-container-case-jaune">Contact</div>
+      <div class="texte-conteneur-case-jaune">Contact</div>
     </a>
   </div>
 
