Correction des fautes dans la page << DescriptionProjet.html >>

--- a/PageDescriptionProjet.html
+++ b/PageDescriptionProjet.html
@@ -38,7 +38,7 @@
   <br>
   <p>Notre projet est un site informatif sur le jeu vidéo Counter-Strike 2. Il a
     <br>pour but de décrire les différentes cartes jouables sur le jeu
-    <br>présentemment.
+    <br>présentement.
     <br>
   </p>
   <br>
@@ -103,28 +103,28 @@
         </strong>
         <br>
         <br>Nous avons opté pour une
-        <br>coloration plutot foncer en
+        <br>coloration plutôt foncé en
         <br>s’inspirant du site Fandom qui
         <br>est majoritairement noir.
         <br>Nous avons fait en sorte que le
-        <br>thème du site sois plutot foncer
+        <br>thème du site soit plutôt foncé
         <br>car nous pensons que c’est en
         <br>rendant le site simple que les
         <br>utilisateurs auront envie de
         <br>revenir. Nous pensons que le
-        <br>fait d’amener un theme plus
+        <br>fait d’amener un thème plus
         <br>coloré nous aurais nuis sur le
         <br>long terme car notre site
         <br>n’aurais pas paru comme un site
-        <br>ou l’ont peux revenir pour
-        <br>decrouvrir les nouveautés ainsi
+        <br>ou l’ont veux revenir pour
+        <br>découvrir les nouveautés ainsi
         <br>que donner son avis.Nous
         <br>n’avons pas repris la couleur de
         <br>fond plus sombre des
         <br>sites.Parce que nous voulons
-        <br>garder prioriser sur la clarté du
+        <br>garder et prioriser sur la clarté du
         <br>site et nous ne voulons pas trop
-        <br>nous inspirer.
+        <br>nous inspirer de ces sites.
         <br>
       </div>
       <div class="conteneur-disposition-elements-visuels">
@@ -142,13 +142,13 @@
         <br>comme idée de mettre des
         <br>courtes vidéos pour attiré le
         <br>public pour avoir un meilleur
-        <br>visuels ainsi qu’une meilleur
-        <br>idée de ce qu’ai le jeu.
-        <br>Nous nous sommes inspiré de
+        <br>visuels ainsi qu’une meilleure
+        <br>idée de se qu’ai le jeu.
+        <br>Nous nous sommes inspirés de
         <br>ce site en mettant
         <br>majoritairement des images
-        <br>et des videos pour que les
-        <br>visiteurs ai un meilleur apercu
+        <br>et des vidéos pour que les
+        <br>visiteurs aient un meilleur apercu
         <br>visuel.
         <br>
       </div>
@@ -161,17 +161,17 @@
         </strong>
         <br>
         <br>Pour l’homogénéité du site
-        <br>nous nous sommes inspiré
-        <br>du site fandom. Notre site
-        <br>reste homogene en tout
-        <br>temps car nous pensons
+        <br>nous nous sommes inspirés
+        <br>du site Fandom. Notre site
+        <br>reste homogène en tout
+        <br>temps ,car nous pensons
         <br>que lorsque l’utilisateur
         <br>essayera de navigué sur
         <br>notre site il aura toujours
         <br>l’impression d’etre sur le
         <br>meme site. Nous rendons
         <br>notre site simple pour aidé
-        <br>l’utilisateur a ne pas ce
+        <br>l’utilisateur à ne pas se
         <br>perdre sur notre site.
         <br>
       </div>
@@ -182,14 +182,14 @@
         </strong>
         <br>
         <br>Pour le guidage, nous nous
-        <br>sommes inspiré du Fandom
-        <br>car a la place de devoir
+        <br>sommes inspirés du Fandom,
+        <br>car à la place de devoir
         <br>toujours remonté sur le haut
         <br>de la page nous avons mis
         <br>un menu sur le bas de la
-        <br>page qui a pour but d’aidé
-        <br>l’utilisateur a revenir sur
-        <br>n’imorte quel page qu’il souhaite.
+        <br>page qui a pour but d’aider
+        <br>l’utilisateur à revenir sur
+        <br>n’importe quelle page qu’il souhaite.
         <br>
       </div>
     </div>
@@ -209,13 +209,13 @@
       <br>contenu. Les éléments sur
       <br>lesquelles j’ai travaillé sont les
       <br>images, les traductions de
-      <br>texte, les aspects visuels ainsi
+      <br>textes, les aspects visuels ainsi
       <br>que le contenu du site.
       <br>Un des défis rencontrés pour
       <br>réaliser la page contenu est le
       <br>fait d’avoir une restriction sur le
       <br>contenu autorisé sur notre
-      <br>page car le jeu est beaucoup
+      <br>page ,car le jeu est beaucoup
       <br>basé sur les armes mais nous
       <br>n’avions pas l’autorisation de
       <br>parler de celles-ci.
@@ -229,7 +229,7 @@
       <!-- Texte présentation Laurier -->Dans ce projet web , j’ai travaillé
       <br>sur plusieurs aspects.Tout d’abord
       <br>, j’ai travaillé sur la majorité de la
-      <br>page d’accueil , donc j’ai pour
+      <br>page d’accueil , donc j’ai travaillé pour
       <br>certaines images , les deux
       <br>vidéos , les boutons de navigation
       <br>entre les pages etc...Donc , j’ai
